--- a/plugins/ПРИМЕЧАНИЕ.md
+++ b/plugins/ПРИМЕЧАНИЕ.md
@@ -1,16 +1,18 @@
-Здесь отсутствуют большинство плагинов, в связи с тем, что это является коммерческой тайной и защиты сервера от плагиата и копирования.
+<h2>Здесь отсутствуют большинство плагинов, в связи с тем, что это является коммерческой тайной и защиты сервера от плагиата и копирования.</h2>
 
-Вы имеете полное право рассмотреть и скачать используемые не проприетарные(бесплатные, общедуступные) плагины.
+<h3>Вы имеете полное право рассмотреть и скачать используемые не проприетарные(бесплатные, общедуступные) плагины.</h3>
 
-В настоящей сборке имеются плагины, не включенные в данный список:
-devs.beer - ItemsAdder
-Willow Studio - MineRP
-Vulcan AntiCheat
-nulli0n - SunLight
-NightExpress - CoinsEngine
-NightExpress - nightcore
-Willow Studio - Custom Fishing
-NotJustNameplates
-CustomNameplates
-RPGDrops
-SIMCheck
+<ul><h3>В настоящей сборке имеются плагины, не включенные в данный список:</h3>
+
+<li>devs.beer - ItemsAdder</li>
+<li>Willow Studio - MineRP</li>
+<li>Vulcan AntiCheat</li>
+<li>nulli0n - SunLight</li>
+<li>NightExpress - CoinsEngine</li>
+<li>NightExpress - nightcore</li>
+<li>Willow Studio - Custom Fishing</li>
+<li>NotJustNameplates</li>
+<li>CustomNameplates</li>
+<li>RPGDrops</li>
+<li>SIMCheck</li>
+</ul>
