--- a/plugins/ПРИМЕЧАНИЕ.md
+++ b/plugins/ПРИМЕЧАНИЕ.md
@@ -2,7 +2,7 @@
 
 <h3>Вы имеете полное право рассмотреть и скачать используемые не проприетарные(бесплатные, общедуступные) плагины.</h3>
 
-<ul><h3>В настоящей сборке имеются плагины, не включенные в данный список:</h3>
+<h3>В настоящей сборке имеются плагины, не включенные в данный список:</h3>
 
 <li>devs.beer - ItemsAdder</li>
 <li>Willow Studio - MineRP</li>
@@ -15,4 +15,4 @@
 <li>CustomNameplates</li>
 <li>RPGDrops</li>
 <li>SIMCheck</li>
-</ul>
+
